support/global/src/main/kotlin/com/example/mindshare/error/exception/JwtClaimException.kt
package com.example.mindshare.error.exception

import com.example.mindshare.ErrorCode

class JwtClaimException(
    val errorCode: ErrorCode,
    val data: Any? = null,
) : RuntimeException(errorCode.message)
